--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,8 @@ Description: What the package does (one paragraph).
 LinkingTo: 
     TMB, 
     RcppEigen
+Depends: 
+    TMB
 License: What license it uses
 Encoding: UTF-8
 LazyData: true
