missing name in as_array

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,10 @@
 
 S3method(as_array,dbtmb)
 S3method(predict,dbtmb)
+S3method(uncertainty,dbtmb)
 export(as_array)
 export(eversex_ui)
 export(predict)
 export(sample_tmb)
+export(uncertainty)
 useDynLib(dbtmb)
